fixes on authors spacing

--- a/source/sass/_organization-page.scss
+++ b/source/sass/_organization-page.scss
@@ -38,6 +38,12 @@
   }
 }
 
+.b-author-page .b-top-section .e-extras {
+    text-align: left;
+    padding-top: 10px;
+}
+
+
 .b-author-page {
   .e-author-picture {
     width: 300px;
